# codegraph-multi-repo-mcp

./: LICENSE  README.md  pyproject.toml
config/: repos.example.yaml
docs/superpowers/plans/: 2026-06-26-codegraph-multi-repo-mcp.md
docs/superpowers/specs/: 2026-06-26-codegraph-multi-repo-mcp-design.md
src/codegraph_multi_repo_mcp/: __init__.py  codegraph_cli.py  config.py  models.py  orchestrator.py  repo_registry.py  router.py  server.py
tests/: test_codegraph_cli.py  test_config.py  test_orchestrator.py  test_repo_registry.py  test_router.py  test_server.py
