[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codegraph-multi-repo-mcp"
version = "0.1.0"
description = "Multi-repository CodeGraph orchestrator exposed as an MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "mcp>=1.0.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "uvicorn>=0.30.0",
]

[project.urls]
Repository = "https://github.com/shinerio/codegraph-multi-repo-mcp"
Issues = "https://github.com/shinerio/codegraph-multi-repo-mcp/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
codegraph-multi-repo-mcp = "codegraph_multi_repo_mcp.server:main"
codegraph-multi-repo-mcp-http = "codegraph_multi_repo_mcp.server:http_main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
